add computed admin